CSS/style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap");
* {
  font-family: "Roboto Condensed", sans-serif;
}

/** GLOBAL STYLES **/
:root {
  --dashboard-color: #3dccc7;
  --white-color: #ffffff;
  --soft-black-color: #4d4d4d;
  --shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
}

body {
  width: 100vw;
  height: 100vh;
  margin: 0;
  display: grid;
  grid-template-columns: minmax(250px, 20vw) 1fr;
  grid-template-rows: repeat(2, 1fr);
  max-width: 100%;
  max-height: 100%;
  background-color: #e2e8f0;
}

/**** HEADER STYLES ****/

.profile-header {
  grid-column: 2 / -1;
  background-color: var(--white-color);
  display: grid;
  grid-template-columns: minmax(300px, 2fr) 1fr;
  max-width: 100%;
  grid-template-rows: 65px 1fr;
  padding: 1.4em;
  box-shadow: var(--shadow);
}

.container.top-left {
  display: grid;
  grid-template-columns: 50px 1fr;
  align-items: center;
}

.container.top-left > input {
  border-radius: 20px;
  height: 25px;
  margin: 0 10px 0 0;
  padding-left: 15px;
  border: none;
  background-color: #4caca943;
}

.container.top-left > input::placeholder {
  color: var();
  font-style: italic;
}

.container.top-left > input:focus {
  outline: 1px solid var(--soft-black-color);
}

.container.top-left > input:focus::placeholder {
  color: transparent;
}

.header-icon {
  width: 1.3em;
  justify-self: center;
}

.header-icon.bell {
  cursor: pointer;
}

.header-icon.bell:hover {
  transition: 0.3s ease-out;
  transform: scale(1.1);
}

.container.top-right {
  display: grid;
  grid-template-columns: repeat(3, 100px);
  justify-items: center;
  align-items: center;
}

.container.top-right > .header-icon {
  justify-self: end;
}

.profile-img {
  width: 45px;
  border-radius: 50%;
  object-fit: cover;
}

.profile-img:hover {
  transition: 0.3s ease-out;
  transform: scale(1.1);
}

.container.bottom-left {
  display: grid;
  grid-template-columns: 125px 2fr;
  justify-items: center;
  align-items: center;
}

.container.bottom-left > .profile-text {
  justify-self: start;
  font-size: 1.5rem;
}

.container.bottom-left > .profile-text span {
  font-size: 0.9rem;
}

.container.bottom-left > picture > a > .profile-img {
  width: 70px;
}

.container.bottom-right {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  justify-items: start;
  align-items: center;
}

.container.bottom-right > .header-button {
  background-color: var(--dashboard-color);
  border: none;
  border-radius: 20px;
  padding: 10px;
  margin-top: 2em;
  width: 80px;
  font-size: 1rem;
  color: var(--white-color);
  cursor: pointer;
}

.container.bottom-right > .header-button:hover {
  transition: 0.3s ease-out;
  color: var(--dashboard-color);
  background-color: var(--white-color);
  outline: 1px solid var(--black-color);
}

/**** DASHBOARD STYLES ****/

.dashboard {
  grid-column: 1/ 2;
  grid-row: 1 / -1;
  max-height: 100%;
  background-color: var(--dashboard-color);
  box-shadow: var(--shadow);
}

nav {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  grid-template-rows: repeat(15, 1fr);
  gap: 25px;
}

#dash-main {
  grid-row: span 3;
}

#dash-main > .menu-title {
  font-size: 2rem;
  margin: 0;
}

#dash-main > .nav-icon {
  height: 2.5em;
  grid-column: 2 / 3;
}

.link {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  text-decoration: none;
  justify-items: start;
  align-items: center;
  cursor: pointer;
}

.link:hover > .menu-title {
  transition: 0.3s ease-out;
  color: black;
}

.nav-icon {
  height: 1.3em;
  grid-column: 2 /3;
}

.menu-title {
  color: var(--white-color);
  grid-column: 3 / -1;
  font-size: 1.2rem;
  margin: 0;
}

.main-content {
  grid-column: 2 / -1;
  grid-row: 2 / -1;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(2, 1fr);
  max-width: 100%;
  gap: 20px;
}

.projects {
  grid-column: 1/ 3;
  grid-row: span 2;
}

/* projects section start */

.projects-title {
  margin: 0;
  padding-left: 20px;
  padding-top: 40px;
}

.project-container {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  padding: 20px;
  gap: 30px;
}

.project {
  border-radius: 10px;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  display: grid;
  background-color: white;
  box-shadow: 5px 5px 10px #ccd1d8;
}

.project:hover {
  transition: 0.3s ease-out;
  transform: scale(1.02);
}

.project span {
  grid-column: 1;
  background-color: orange;
  width: 5px;
  border-bottom-left-radius: 5px;
  border-top-left-radius: 5px;
}

.project-content {
  display: grid;
  grid-column: 2;
  padding: 10px;
}

.project-header {
  grid-column: 1/3;
  grid-row: 1;
}

.project-text {
  grid-column: 1/3;
  grid-row: 2;
}

.icons {
  display: inline-grid;
  gap: 20px;
  grid-column: 2/3;
  grid-row: 3;
}

.star-icon,
.eye-icon,
.share-icon {
  cursor: pointer;
}

.star-icon:hover,
.eye-icon:hover,
.share-icon:hover {
  transition: 0.3s ease-out;
  transform: scale(1.1);
}

.star-icon {
  grid-column: 1;
  grid-row: 1;
}

.eye-icon {
  grid-column: 2;
  grid-row: 1;
}

.share-icon {
  grid-column: 3;
  grid-row: 1;
}

/* projects section end */

/* announcements section start */

.announcements {
  grid-column: 3 / 4;
  padding: 20px;
  padding-left: 0;
}

.announcements-container {
  display: grid;
  gap: 10px;
  grid-template-rows: repeat(auto-fill, minmax(150px, 1fr));
  background-color: white;
  border-radius: 10px;
  padding: 20px;
  box-shadow: 5px 5px 10px #ccd1d8;
}

.announcements-container span {
  margin: 0 auto;
  width: 90%;
  height: 1px;
  background-color: gray;
}

/* announcements section end */

/* trending section start */

.trending {
  grid-column: 3 / 4;
  padding: 20px;
  padding-top: 0;
  padding-left: 0;
}

.trending-title {
  margin-top: 0;
}

.trending-container {
  display: grid;
  gap: 10px;
  grid-template-rows: repeat(3, 1fr);
  background-color: white;
  border-radius: 10px;
  padding: 20px;
  box-shadow: 5px 5px 10px #ccd1d8;
  justify-content: start;
}

.trending-card {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

.trending-content p,
.trending-content h4 {
  line-height: 0;
}

.trending-img {
  grid-row: 1;
  grid-column: 1;
  width: 50px;
  height: 50px;
  border-radius: 50%;
}

.trending-content {
  grid-row: 1;
  grid-column: 2;
}
/* trending section end */

